fixed social icons to make them wrap:

--- a/styles.css
+++ b/styles.css
@@ -234,8 +234,9 @@ footer p {
     }
 
     #socials {
+        flex-wrap: wrap;
         justify-content: center;
-        gap: 10rem;
+        gap: 5%;
     }
 
     /*skills styles*/
